tanzu-java-web-app/.tanzu/config/httproute-tanzu-java-web-app.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/tanzu-java-web-app
  name: tanzu-java-web-app-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: tanzu-java-web-app
  rules:
  - backendRefs:
    - kind: Service
      name: tanzu-java-web-app
      port: 8080
